Fixed sidemenu not being scrollable on small vh

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -9669,16 +9669,18 @@ a:active .caret-triangle .caret-path,
     display: block;
     font-size: 1.07142857rem;
     left: auto;
-    min-height: 100%;
+    min-height: 100vh;
     min-width: 200px;
     max-width: 400px;
     opacity: 0;
+    overflow: auto;
     padding-top: 2em;
     padding-bottom: 2em;
     pointer-events: none;
     position: fixed;
     right: 0;
     top: 0;
+    bottom: 0;
     transform: translateX(110%);
     transition: all .3s;
     width: 90%;
