--- a/docroot/themes/iucn_who/less/theme/sidemenu.less
+++ b/docroot/themes/iucn_who/less/theme/sidemenu.less
@@ -46,16 +46,18 @@
     display: block;
     font-size: 15 * @rem-multiplier--mobile;
     left: auto;
-    min-height: 100%;
+    min-height: 100vh;
     min-width: 200px;
     max-width: 400px;
     opacity: 0;
+    overflow: auto;
     padding-top: 2em;
     padding-bottom: 2em;
     pointer-events: none;
     position: fixed;
     right: 0;
     top: 0;
+    bottom: 0;
     transform+_: translateX(110%);
     transition+_: all .3s;
     width: 90%;
